--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,132 @@ a {
 .main-image { 
     height: 30rem;
 }
+
+.hidden {
+    opacity: 0;
+}
+
+html, body {
+    height: 100%; 
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+nav {
+    height: 15%;
+    width: 100%;
+}
+
+main {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 75%;
+    height: fit-content;
+    width: 100%;
+}
+
+.header {
+    width: 100%;
+}
+
+.header > * {
+    position: relative;
+    left: 3rem;
+    max-width: 60%;
+}
+
+.header > hr {
+    margin-left: 0.1rem;
+    margin-right: auto;
+    max-width: 80%;
+    width: 30rem;
+    position: relative;
+}
+
+.items-display {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 70vw;
+    width: 80%;
+}
+
+.item { 
+    align-items: center;
+    background-size: cover;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    height: 15rem; 
+    margin: 2rem;
+    text-decoration: none;
+    width: 15rem;
+}
+
+.item:hover .hidden {
+    opacity: 1;
+}
+
+.item > * {
+    color: rgba(255, 255, 255, 0.98);
+    position: relative;
+    top: 5rem;
+}
+
+.item > p {
+    width: 80%;
+    text-align: center;
+}
+
+.detail-container {
+    align-items: flex-start;
+    display: flex;
+    justify-content: center;
+}
+
+.detail-container > .left {
+    padding: 1rem;
+    margin-top: 2rem;
+    position: relative;
+}
+
+.detail-container > .right {
+    margin-left: 1rem;
+    margin-top: 2rem;
+    position: relative;
+}
+
+
+.detail-container > .right > h2 {
+    font-size: 1.2rem;
+}
+
+.detail-container > .right > hr {
+    margin-left: 0.1rem;
+    margin-right: auto;
+    max-width: 10rem;
+    position: relative;
+}
+
+.main-img {
+    max-height: 25rem;
+    height: 40vw;
+}
+
+footer {
+    height: 10%;
+    text-align: center;
+    width: 100%;
+}
+
+footer > p {
+    position: relative;
+    top: 2rem;
+}
+
+
+
+
+
