--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content 
     main
-        h1 !{title}
+        h1= title
         p Brooklyn's Original Boutique Art Store
         hr
         p Browse our collection before you stop by for a visit
