Fix Unsplash API Bug and instance detail bug

--- a/views/artpieceinstance_detail.pug
+++ b/views/artpieceinstance_detail.pug
@@ -8,7 +8,7 @@ block content
             hr
         div.detail-container
             div.left
-                img.main-img(src=artpiece.img)
+                img.main-img(src=artpiece.image)
             div.right
                 h2 Date Made
                 p #{instance.dateMade}
