--- a/views/artpieces_list.pug
+++ b/views/artpieces_list.pug
@@ -6,6 +6,7 @@ block content
             h1= title 
             p The finest artworks - by the finest fine artists. 
             hr 
+            a(href='/inventory/pieces/create') Add art piece
         div.items-display
             if artpieces
                 each artpiece in artpieces 
