--- a/views/category_list.pug
+++ b/views/category_list.pug
@@ -6,6 +6,7 @@ block content
             h1= title 
             p Fine categories for fine fine art 
             hr 
+            a(href='/inventory/category/create') Add category
         div.items-display
             if categories
                 - let n = 0; 
