--- a/views/painters_list.pug
+++ b/views/painters_list.pug
@@ -6,6 +6,7 @@ block content
             h1= title 
             p The finest painters of human history.
             hr 
+            a(href='/inventory/painter/create') Add painter
         div.items-display
             if painters
                 each painter in painters 
