--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,9 @@
+:root {
+    --main-button-bg: #6495ED;
+    --main-button-border: #FFA500;
+    --main-input-border: #989898;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -54,6 +60,10 @@ main {
     position: relative;
 }
 
+.header > a {
+    width: 100%;
+}
+
 .items-display {
     display: flex;
     flex-wrap: wrap;
@@ -69,7 +79,7 @@ main {
     display: flex;
     flex-direction: column;
     height: 15rem; 
-    margin: 2rem;
+                                                                   margin: 2rem;
     text-decoration: none;
     width: 15rem;
 }
@@ -112,6 +122,10 @@ main {
     font-size: 1.2rem;
 }
 
+.detail-container > .right > p {
+    max-width: vw;
+}
+
 .detail-container > .right > hr {
     margin-left: 0.1rem;
     margin-right: auto;
@@ -119,9 +133,112 @@ main {
     position: relative;
 }
 
+.detail-container > .right > form {
+    display: flex;
+    height: 4rem;
+    justify-content: start;
+    width: 100%;
+}
+
+.fake-link {
+    border: none;
+    color: var(--main-button-bg);
+    cursor: pointer;
+    background: none;
+    font-size: 0.9rem;
+    position: relative;
+    text-decoration: underline;
+    top: 1rem;
+    width: fit-content;
+}
+
 .main-img {
     max-height: 25rem;
     height: 40vw;
+}
+
+form { 
+    align-items: flex-start;
+    flex-direction: column;
+    display: flex;
+    height: fit-content;
+    width: 100%;
+}
+
+.create-form > * {
+    left: 3.5rem;
+    position: relative;
+}
+
+.form-group {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+}
+
+.form-group > * {
+    margin-top: 0.4rem;
+}
+
+.form-group > label { 
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.form-group > select, .form-group > input, .form-group > textarea { 
+    border: 1px solid var(--main-input-border);
+    border-radius: 12px;
+}
+
+.form-group > input { 
+    width: 20rem;
+}
+
+.form-group > textarea {
+    height: 8rem;
+    width: 24rem;
+}
+
+.create-form > button {
+    position: relative;
+    top: 1.2rem;
+    width: 5rem;
+}
+
+.form-group > .checkboxes { 
+    display: flex;
+    justify-content: start;
+    width: 20rem;
+}
+
+.checkboxes {
+    flex-wrap: wrap;
+}
+
+.checkbox { 
+    height: fit-content;
+    width: fit-content;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    margin-bottom: 0.25rem;
+    margin-top: 0.25rem;
+}
+
+.main-button {
+    background-color: var(--main-button-bg);
+    border: 1px solid var(--main-button-border);
+    border-radius: 20px;
+    cursor: pointer;
+    color: white;
+    font-size: 1rem;
+    height: 2.2rem;
+    opacity: 0.8;
+    width: 8rem;
+}
+
+.main-button:hover { 
+    opacity: 1; 
 }
 
 footer {
