--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -3,7 +3,7 @@ extends layout
 block content 
     main
         h1= title
-        p Brooklyn's Original Boutique Art Store
+        p #[em Brooklyn's Original Boutique Art Store]
         hr
         p Browse our collection before you stop by for a visit
         img.main-image(src='/images/homepage_img.jpeg')
