--- a/views/artpieceinstance_detail.pug
+++ b/views/artpieceinstance_detail.pug
@@ -4,18 +4,22 @@ block content
     main 
         div.header
             h1 #{artpiece.name} - #{instance._id}
-            p #{instance.status}
+            p(class=instance.status.toLowerCase().split(' ').join('-')) #{instance.status}
             hr
         div.detail-container
             div.left
                 img.main-img(src=artpiece.image)
             div.right
                 h2 Date Made
-                p #{instance.dateMade}
+                p #{instance.dateMade.toISOString().split('T')[0]}
                 h3 Authenticity 
                 p #{instance.genuine}
                 h3 Price
                 p #{instance.price}
                 h3 Product Number 
                 p #{instance.productNumber}
+                div.spacer
+                a(href=instance.url+'/update') Update art piece instance
+                div.spacer
+                a(href=instance.url+'/delete') Delete art piece instance
                 
