--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -11,10 +11,15 @@ block content
                 img.main-img(src=img)
             div.right
                 h2 About
-                p= category.description
+                p= htmlDecode(category.description)
                 h3 Art Pieces
                 ul 
                     each painting in paintings
                         li
                             a(href=painting.url) #{painting.name}
+
+                div.spacer
+                a(href=category.url+'/update') Update category
+                div.spacer
+                a(href=category.url+'/delete') Delete category
                 
